fix search bar alignment

--- a/app/assets/stylesheets/album-form.css
+++ b/app/assets/stylesheets/album-form.css
@@ -69,7 +69,7 @@
   border-radius: 3px;
   outline: none;
   margin: 11px;
-  margin-left: 67px;
+  margin-left: 55px;
 }
 
 .search-input:focus {
